--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
         <activity android:name=".list.activity.WordListActivity" >
         </activity>
+        <activity android:name=".study.StudyActivity">
+        </activity>
     </application>
 
 </manifest>
